plugins {
    id 'java'
    id 'application'

    id 'org.openjfx.javafxplugin' version '0.0.5'
}

group 'edu.wat'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os


repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile "org.openjfx:javafx-base:11:$platform"
    compile "org.openjfx:javafx-graphics:11:$platform"
    compile "org.openjfx:javafx-controls:11:$platform"
}

compileJava {
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls'
        ]
    }
}

run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls'
        ]
    }
    mainClassName = "Main"
}

javafx {
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}